fixed horizontal scrolling on startpage

--- a/resources/less/metager/pages/start-page.less
+++ b/resources/less/metager/pages/start-page.less
@@ -52,9 +52,11 @@
         margin-top: 60px;
         width: 100%;
         top: 100vh;
+        left: 0;
         position: absolute;
         @media(min-width: 520px){
             top: inherit;
+            left: inherit;
             bottom: 100px;
             position: inherit;
         }
